# fast-drf

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt  settings.py  setup.py  urls.py
.github/workflows/: python-package.yml
docs/: index.md  requirements.txt
example_app/: apps.py  models.py  serializers.py  views.py
example_app/migrations/: 0001_initial.py  0002_post_testuser.py  0003_post_author.py  0004_auto_20190221_0730.py
fast_drf/: __init__.py  router.py  signals.py
fast_drf/core/: api_generator.py  class_factory.py  serializer_generator.py  viewset_generator.py
fast_drf/mixins/: __init__.py  api_filtered_mixin.py  expose_api_model_mixin.py  expose_api_viewset_mixin.py
fast_drf/tests/: __init__.py  base.py  tests_serializer_generator.py  tests_utility_methods.py  tests_viewset_generator.py
fast_drf/tests/test_app/: __init__.py  apps.py  models.py  receivers.py  serializers.py  views.py
fast_drf/tests/test_app/migrations/: 0001_initial.py  0002_userprofile_photo.py  0003_post_photo.py
fast_drf/utils/: enums.py  parser.py  predicate.py
test_app/: models.py  urls.py
